--- a/healthcare.ipynb
+++ b/healthcare.ipynb
@@ -4,9 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Medical Appoinment Case Study\n",
-    "\n",
-    "##### In this notebook we will be analysing data set which has the data of "
+    "# Medical Appoinment Case Study"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "##### An efficient Healthcare system of a country can contribute to a significant part of a country’s economy, development and industrialization. Health care is conventionally regarded as an important determinant in promoting the general physical and mental health and well-being of people around the world. The management of appointments in a certain hospital or one of its divisions also contributes to the efficiency of the healthcare system, the effectiveness of managing the patients is severely hampered when patients fail to be on time for appointments. However, if we knew which day of the week the patients preferred, which gender is likely to show up on the appointment on the given day, which age group preferred what day of the week, we could find a solution. We will be exploring the given Data Set for extracting these insights."
    ]
   },
   {
