--- a/healthcare.ipynb
+++ b/healthcare.ipynb
@@ -16,6 +16,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This dataset contains data of around 110k medical appointments of patients who registered for appointment and whether the patient showed up or not. The dataset comes with additional information to each appointment such as: gender, age, date of scheduling, date of actual appointment, neighborhood, scholarship, sms-reminded as well as an indication for one or more diseases the patient might suffer. The possible options for these diseases are: hypertension, diabetes, alcoholism, handicap (not further declared)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
