description and comments

--- a/healthcare.ipynb
+++ b/healthcare.ipynb
@@ -31,16 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importing all required library\n",
     "import numpy as np, pandas as pd, seaborn as sns, matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -193,13 +194,13 @@
        "4         1           0        0             0      No  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "base_data = pd.read_csv(\"Data.csv\")\n",
+    "base_data = pd.read_csv(\"Data.csv\")  # reading and importing data\n",
     "base_data.head() # Reading the datasets first five rows"
    ]
   },
@@ -369,27 +370,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(110527, 13)"
+       "(110527, 14)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "base_data.shape # there are 110527 rows and 14 columnns in the dataset"
+    "base_data.shape # this functions gives the size of the data set "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### There are 110527 rows and 14 columnns in the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +429,7 @@
     }
    ],
    "source": [
-    "base_data.info()"
+    "base_data.info() # for checking the data types and column names "
    ]
   },
   {
