--- a/healthcare.ipynb
+++ b/healthcare.ipynb
@@ -4,15 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Medical Appoinment Case Study"
+    "# Medical Appoinment Case Study\n",
+    "#### Exploring and getting insights of the data set having data of appointments of patients having different health related problems such as diabetes, hypertension etc "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction\n",
-    "##### An efficient Healthcare system of a country can contribute to a significant part of a country’s economy, development and industrialization. Health care is conventionally regarded as an important determinant in promoting the general physical and mental health and well-being of people around the world. The management of appointments in a certain hospital or one of its divisions also contributes to the efficiency of the healthcare system, the effectiveness of managing the patients is severely hampered when patients fail to be on time for appointments. However, if we knew which day of the week the patients preferred, which gender is likely to show up on the appointment on the given day, which age group preferred what day of the week, we could find a solution. We will be exploring the given Data Set for extracting these insights."
+    "## Introduction\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### The recent raise in health related issues has made it fundamental that everyone one has easy access to health care but its been discoved that despite provision of access patient may or may not show up for their appointments leading to hospital incuring losses on operating cost as salaries will be paid wether or not patient visit the hospitals as expected. This report tries to analyse the reason why patients dont show up for their appointments after scheduling one and providing possible solutions the hospitals can consider in improvoing their revenue.\n",
+    "\n",
+    "#### Dataset used for this project was collected from Kaggle the dataset contains 110k medical appointments in Brazil, collected in May/June 2016 and its focused on characteristics of patients as well as their presence or absence from scheduled medical appointments. The dataset is made up of 14 unique variables.\n"
    ]
   },
   {
@@ -26,7 +36,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### This dataset contains data of around 110k medical appointments of patients who registered for appointment and whether the patient showed up or not. The dataset comes with additional information to each appointment such as: gender, age, date of scheduling, date of actual appointment, neighborhood, scholarship, sms-reminded as well as an indication for one or more diseases the patient might suffer. The possible options for these diseases are: hypertension, diabetes, alcoholism, handicap (not further declared)."
+    "\n",
+    "#### Variables in this dataset includes (PatientId, AppointmentID, Gender, ScheduledDay, AppointmentDay, Age, Hipertension, Diabetes, Alcoholism,  Handcap, SMS_received, Neighbourhood, Scholarship and No-show ). This analysis will be done using the No-show variable as our dependent variable while other variables will be used as independent varaibles.\n",
+    "\n",
+    "#### Identifying factors responsible to no-show will definitely help Hospital better determine types of scheduled appointments to plan for and provide incentives that enables patient show up for their appointments.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### This Project will be providing insights into the following qustions:\n",
+    "* What percentage of people showed up compared to those that didnt?\n",
+    "\n",
+    "* Why Are People Not Showing Up?\n",
+    "\n",
+    "* Does scholarship affect patient ability to show up?\n",
+    "\n",
+    "* Does SMS alert impacts patient availability for their appointment?\n",
+    "\n",
+    "* Is there any relationship between distance from patient neighbourhood to the hospital and their showing up for appointments?\n",
+    "\n",
+    "* whats the time difference between a patient schedule date and his appointment date. What impact does this have on the patient ability to show up?\n",
+    "\n",
+    "* Is there any relationship between patient age and their ability to show up?\n",
+    "\n",
+    "* Does gender play any role in patient missing their appointment?"
    ]
   },
   {
