--- a/healthcare.ipynb
+++ b/healthcare.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "4         1           0        0             0      No  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "110526         0           0        0             1      No  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "(110527, 14)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -487,41 +487,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Droping Columns\n",
-    "#### droping some column which are not important for our study since these columns give unnecessary details like in Patient Id or appointment ID and neighbourhood of the pateint is extra info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# base_data.drop(['PatientId', 'AppointmentID', 'Neighbourhood'], axis=1, inplace=True)\n",
-    "# base_data"
+    "## Correcting column names"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The datatype of the column \"ScheduledDay\" and \"AppointmentDay\" is not absolute so changing its format from 2016-04-29T18:38:08Z\t to 2016-04-29"
+    "#### Renaming all the columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PatientId', 'AppointmentID', 'Gender', 'ScheduledDay',\n",
+       "       'AppointmentDay', 'Age', 'Neighbourhood', 'Scholarship', 'Hipertension',\n",
+       "       'Diabetes', 'Alcoholism', 'Handcap', 'SMS_received', 'No-show'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#modifying the date and time into standard form\n",
-    "base_data['ScheduledDay'] = pd.to_datetime(base_data['ScheduledDay']).dt.date.astype('datetime64[ns]')\n",
-    "base_data['AppointmentDay'] = pd.to_datetime(base_data['AppointmentDay']).dt.date.astype('datetime64[ns]')"
+    "#changing the name of some cloumns\n",
+    "base_data= base_data.rename(columns={'Hipertension': 'Hypertension', 'Handcap': 'Handicap'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PatientId', 'AppointmentID', 'Gender', 'ScheduledDay',\n",
+       "       'AppointmentDay', 'Age', 'Neighbourhood', 'Scholarship', 'Hypertension',\n",
+       "       'Diabetes', 'Alcoholism', 'Handicap', 'SMS_received', 'No-show'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_data.columns # now corrected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -531,35 +565,41 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 110527 entries, 0 to 110526\n",
       "Data columns (total 14 columns):\n",
-      " #   Column          Non-Null Count   Dtype         \n",
-      "---  ------          --------------   -----         \n",
-      " 0   PatientId       110527 non-null  float64       \n",
-      " 1   AppointmentID   110527 non-null  int64         \n",
-      " 2   Gender          110527 non-null  object        \n",
-      " 3   ScheduledDay    110527 non-null  datetime64[ns]\n",
-      " 4   AppointmentDay  110527 non-null  datetime64[ns]\n",
-      " 5   Age             110527 non-null  int64         \n",
-      " 6   Neighbourhood   110527 non-null  object        \n",
-      " 7   Scholarship     110527 non-null  int64         \n",
-      " 8   Hipertension    110527 non-null  int64         \n",
-      " 9   Diabetes        110527 non-null  int64         \n",
-      " 10  Alcoholism      110527 non-null  int64         \n",
-      " 11  Handcap         110527 non-null  int64         \n",
-      " 12  SMS_received    110527 non-null  int64         \n",
-      " 13  No-show         110527 non-null  object        \n",
-      "dtypes: datetime64[ns](2), float64(1), int64(8), object(3)\n",
+      " #   Column          Non-Null Count   Dtype  \n",
+      "---  ------          --------------   -----  \n",
+      " 0   PatientId       110527 non-null  float64\n",
+      " 1   AppointmentID   110527 non-null  int64  \n",
+      " 2   Gender          110527 non-null  object \n",
+      " 3   ScheduledDay    110527 non-null  object \n",
+      " 4   AppointmentDay  110527 non-null  object \n",
+      " 5   Age             110527 non-null  int64  \n",
+      " 6   Neighbourhood   110527 non-null  object \n",
+      " 7   Scholarship     110527 non-null  int64  \n",
+      " 8   Hypertension    110527 non-null  int64  \n",
+      " 9   Diabetes        110527 non-null  int64  \n",
+      " 10  Alcoholism      110527 non-null  int64  \n",
+      " 11  Handicap        110527 non-null  int64  \n",
+      " 12  SMS_received    110527 non-null  int64  \n",
+      " 13  No-show         110527 non-null  object \n",
+      "dtypes: float64(1), int64(8), object(5)\n",
       "memory usage: 11.8+ MB\n"
      ]
     }
    ],
    "source": [
-    "base_data.info()\n",
-    "## checking again"
+    "base_data.info() # Everything looks fine now"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The datatype of the column \"ScheduledDay\" and \"AppointmentDay\" is not absolute so changing its format."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -591,10 +631,10 @@
        "      <th>Age</th>\n",
        "      <th>Neighbourhood</th>\n",
        "      <th>Scholarship</th>\n",
-       "      <th>Hipertension</th>\n",
+       "      <th>Hypertension</th>\n",
        "      <th>Diabetes</th>\n",
        "      <th>Alcoholism</th>\n",
-       "      <th>Handcap</th>\n",
+       "      <th>Handicap</th>\n",
        "      <th>SMS_received</th>\n",
        "      <th>No-show</th>\n",
        "    </tr>\n",
@@ -605,7 +645,7 @@
        "      <td>2.987250e+13</td>\n",
        "      <td>5642903</td>\n",
        "      <td>F</td>\n",
-       "      <td>2016-04-29</td>\n",
+       "      <td>2016-04-29 18:38:08</td>\n",
        "      <td>2016-04-29</td>\n",
        "      <td>62</td>\n",
        "      <td>JARDIM DA PENHA</td>\n",
@@ -622,7 +662,7 @@
        "      <td>5.589978e+14</td>\n",
        "      <td>5642503</td>\n",
        "      <td>M</td>\n",
-       "      <td>2016-04-29</td>\n",
+       "      <td>2016-04-29 16:08:27</td>\n",
        "      <td>2016-04-29</td>\n",
        "      <td>56</td>\n",
        "      <td>JARDIM DA PENHA</td>\n",
@@ -639,7 +679,7 @@
        "      <td>4.262962e+12</td>\n",
        "      <td>5642549</td>\n",
        "      <td>F</td>\n",
-       "      <td>2016-04-29</td>\n",
+       "      <td>2016-04-29 16:19:04</td>\n",
        "      <td>2016-04-29</td>\n",
        "      <td>62</td>\n",
        "      <td>MATA DA PRAIA</td>\n",
@@ -656,7 +696,7 @@
        "      <td>8.679512e+11</td>\n",
        "      <td>5642828</td>\n",
        "      <td>F</td>\n",
-       "      <td>2016-04-29</td>\n",
+       "      <td>2016-04-29 17:29:31</td>\n",
        "      <td>2016-04-29</td>\n",
        "      <td>8</td>\n",
        "      <td>PONTAL DE CAMBURI</td>\n",
@@ -673,7 +713,7 @@
        "      <td>8.841186e+12</td>\n",
        "      <td>5642494</td>\n",
        "      <td>F</td>\n",
-       "      <td>2016-04-29</td>\n",
+       "      <td>2016-04-29 16:07:23</td>\n",
        "      <td>2016-04-29</td>\n",
        "      <td>56</td>\n",
        "      <td>JARDIM DA PENHA</td>\n",
@@ -690,143 +730,164 @@
        "</div>"
       ],
       "text/plain": [
-       "      PatientId  AppointmentID Gender ScheduledDay AppointmentDay  Age  \\\n",
-       "0  2.987250e+13        5642903      F   2016-04-29     2016-04-29   62   \n",
-       "1  5.589978e+14        5642503      M   2016-04-29     2016-04-29   56   \n",
-       "2  4.262962e+12        5642549      F   2016-04-29     2016-04-29   62   \n",
-       "3  8.679512e+11        5642828      F   2016-04-29     2016-04-29    8   \n",
-       "4  8.841186e+12        5642494      F   2016-04-29     2016-04-29   56   \n",
+       "      PatientId  AppointmentID Gender        ScheduledDay AppointmentDay  Age  \\\n",
+       "0  2.987250e+13        5642903      F 2016-04-29 18:38:08     2016-04-29   62   \n",
+       "1  5.589978e+14        5642503      M 2016-04-29 16:08:27     2016-04-29   56   \n",
+       "2  4.262962e+12        5642549      F 2016-04-29 16:19:04     2016-04-29   62   \n",
+       "3  8.679512e+11        5642828      F 2016-04-29 17:29:31     2016-04-29    8   \n",
+       "4  8.841186e+12        5642494      F 2016-04-29 16:07:23     2016-04-29   56   \n",
        "\n",
-       "       Neighbourhood  Scholarship  Hipertension  Diabetes  Alcoholism  \\\n",
+       "       Neighbourhood  Scholarship  Hypertension  Diabetes  Alcoholism  \\\n",
        "0    JARDIM DA PENHA            0             1         0           0   \n",
        "1    JARDIM DA PENHA            0             0         0           0   \n",
        "2      MATA DA PRAIA            0             0         0           0   \n",
        "3  PONTAL DE CAMBURI            0             0         0           0   \n",
        "4    JARDIM DA PENHA            0             1         1           0   \n",
        "\n",
-       "   Handcap  SMS_received No-show  \n",
-       "0        0             0      No  \n",
-       "1        0             0      No  \n",
-       "2        0             0      No  \n",
-       "3        0             0      No  \n",
-       "4        0             0      No  "
+       "   Handicap  SMS_received No-show  \n",
+       "0         0             0      No  \n",
+       "1         0             0      No  \n",
+       "2         0             0      No  \n",
+       "3         0             0      No  \n",
+       "4         0             0      No  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "base_data.head()\n",
-    "# now the date is in correct format which is yyyy-mm-dd"
+    "# Converting to Datetime\n",
+    "base_data['ScheduledDay'] = pd.to_datetime(base_data['ScheduledDay'])\n",
+    "base_data['AppointmentDay'] = pd.to_datetime(base_data['AppointmentDay'])\n",
+    "\n",
+    "#Removing the TimeZones\n",
+    "base_data['ScheduledDay'] = base_data['ScheduledDay'].dt.tz_localize(None)\n",
+    "base_data['AppointmentDay'] = base_data['AppointmentDay'].dt.tz_localize(None)\n",
+    "base_data.head()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Correcting column names"
+    "### Correcting the inconsistent datatypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PatientId</th>\n",
+       "      <th>AppointmentID</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>ScheduledDay</th>\n",
+       "      <th>AppointmentDay</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "      <th>Scholarship</th>\n",
+       "      <th>Hypertension</th>\n",
+       "      <th>Diabetes</th>\n",
+       "      <th>Alcoholism</th>\n",
+       "      <th>Handicap</th>\n",
+       "      <th>SMS_received</th>\n",
+       "      <th>No-show</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.987250e+13</td>\n",
+       "      <td>5642903</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2016-04-29 18:38:08</td>\n",
+       "      <td>2016-04-29</td>\n",
+       "      <td>62</td>\n",
+       "      <td>JARDIM DA PENHA</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.589978e+14</td>\n",
+       "      <td>5642503</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2016-04-29 16:08:27</td>\n",
+       "      <td>2016-04-29</td>\n",
+       "      <td>56</td>\n",
+       "      <td>JARDIM DA PENHA</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      PatientId  AppointmentID Gender        ScheduledDay AppointmentDay  Age  \\\n",
+       "0  2.987250e+13        5642903      F 2016-04-29 18:38:08     2016-04-29   62   \n",
+       "1  5.589978e+14        5642503      M 2016-04-29 16:08:27     2016-04-29   56   \n",
+       "\n",
+       "     Neighbourhood  Scholarship  Hypertension  Diabetes  Alcoholism  Handicap  \\\n",
+       "0  JARDIM DA PENHA        False          True     False       False     False   \n",
+       "1  JARDIM DA PENHA        False         False     False       False     False   \n",
+       "\n",
+       "   SMS_received No-show  \n",
+       "0             0      No  \n",
+       "1             0      No  "
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Converting Scholarships to SMS Columns values from 0 ,1 to Boolean\n",
+    "for each in [\"Scholarship\", \"Hypertension\", \"Diabetes\", \"Alcoholism\", \"Handicap\"]:\n",
+    "    base_data[each] = base_data[each].astype(bool)\n",
+    "\n",
+    "base_data.head(2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Renaming all the columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['PatientId', 'AppointmentID', 'Gender', 'ScheduledDay',\n",
-       "       'AppointmentDay', 'Age', 'Neighbourhood', 'Scholarship', 'Hipertension',\n",
-       "       'Diabetes', 'Alcoholism', 'Handcap', 'SMS_received', 'No-show'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "base_data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#changing the name of some cloumns\n",
-    "base_data= base_data.rename(columns={'Hipertension': 'Hypertension', 'Handcap': 'Handicap', 'SMS_received': 'SMSReceived', 'No-show': 'NoShow'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['PatientId', 'AppointmentID', 'Gender', 'ScheduledDay',\n",
-       "       'AppointmentDay', 'Age', 'Neighbourhood', 'Scholarship', 'Hypertension',\n",
-       "       'Diabetes', 'Alcoholism', 'Handicap', 'SMSReceived', 'NoShow'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "base_data.columns # now corrected"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 110527 entries, 0 to 110526\n",
-      "Data columns (total 14 columns):\n",
-      " #   Column          Non-Null Count   Dtype         \n",
-      "---  ------          --------------   -----         \n",
-      " 0   PatientId       110527 non-null  float64       \n",
-      " 1   AppointmentID   110527 non-null  int64         \n",
-      " 2   Gender          110527 non-null  object        \n",
-      " 3   ScheduledDay    110527 non-null  datetime64[ns]\n",
-      " 4   AppointmentDay  110527 non-null  datetime64[ns]\n",
-      " 5   Age             110527 non-null  int64         \n",
-      " 6   Neighbourhood   110527 non-null  object        \n",
-      " 7   Scholarship     110527 non-null  int64         \n",
-      " 8   Hypertension    110527 non-null  int64         \n",
-      " 9   Diabetes        110527 non-null  int64         \n",
-      " 10  Alcoholism      110527 non-null  int64         \n",
-      " 11  Handicap        110527 non-null  int64         \n",
-      " 12  SMSReceived     110527 non-null  int64         \n",
-      " 13  NoShow          110527 non-null  object        \n",
-      "dtypes: datetime64[ns](2), float64(1), int64(8), object(3)\n",
-      "memory usage: 11.8+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "base_data.info() # Everything looks fine now"
+    "### Checking for null values"
    ]
   },
   {
