--- a/healthcare.ipynb
+++ b/healthcare.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Medical Appoinment Case Study\n",
+    "# Medical Appointment Case Study\n",
     "#### Exploring and getting insights of the data set having data of appointments of patients having different health related problems such as diabetes, hypertension etc "
    ]
   },
@@ -20,9 +20,10 @@
    "metadata": {},
    "source": [
     "\n",
-    "#### The recent raise in health related issues has made it fundamental that everyone one has easy access to health care but its been discoved that despite provision of access patient may or may not show up for their appointments leading to hospital incuring losses on operating cost as salaries will be paid wether or not patient visit the hospitals as expected. This report tries to analyse the reason why patients dont show up for their appointments after scheduling one and providing possible solutions the hospitals can consider in improvoing their revenue.\n",
+    "#### The recent raise in health related issues has made it fundamental that everyone one has easy access to health care but its been discovered that despite provision of access patient may or may not show up for their appointments leading to hospital incurring losses on operating cost as salaries will be paid whether or not patient visit the hospitals as expected. This report tries to analyze the reason why patients don't show up for their appointments after scheduling one and providing possible solutions the hospitals can consider in improving their revenue.\n",
     "\n",
-    "#### Dataset used for this project was collected from Kaggle the dataset contains 110k medical appointments in Brazil, collected in May/June 2016 and its focused on characteristics of patients as well as their presence or absence from scheduled medical appointments. The dataset is made up of 14 unique variables.\n"
+    "#### Dataset used for this project was collected from Kaggle. The dataset contains 110k medical appointments in Brazil, collected in May/June 2016 and is focused on characteristics of patients as well as their presence or absence from scheduled medical appointments. The dataset is made up of 14 unique variables.\n",
+    "\n"
    ]
   },
   {
@@ -46,28 +47,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "#### This Project will be providing insights into the following qustions:\n",
-    "* What percentage of people showed up compared to those that didnt?\n",
+    "## This Project will be providing insights into the following questions:\n",
+    "* What percentage of people showed up compared to those that didn't?\n",
     "\n",
     "* Why Are People Not Showing Up?\n",
     "\n",
-    "* Does scholarship affect patient ability to show up?\n",
+    "* Does scholarship affect a patient's ability to show up?\n",
     "\n",
-    "* Does SMS alert impacts patient availability for their appointment?\n",
+    "* Does SMS alert impact patient availability for their appointment?\n",
     "\n",
-    "* Is there any relationship between distance from patient neighbourhood to the hospital and their showing up for appointments?\n",
+    "* Is there any relationship between distance from the patient's neighborhood to the hospital and their showing up for appointments?\n",
     "\n",
-    "* whats the time difference between a patient schedule date and his appointment date. What impact does this have on the patient ability to show up?\n",
+    "* What's the time difference between a patient's schedule date and his appointment date? What impact does this have on the patient's ability to show up?\n",
     "\n",
     "* Is there any relationship between patient age and their ability to show up?\n",
     "\n",
-    "* Does gender play any role in patient missing their appointment?"
+    "* Does gender play any role in patients missing their appointment?\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "4         1           0        0             0      No  "
       ]
      },
-     "execution_count": 196,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "110526         0           0        0             1      No  "
       ]
      },
-     "execution_count": 197,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "(110527, 14)"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -544,50 +544,13 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "base_data.columns # now corrected"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 203,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 110527 entries, 0 to 110526\n",
-      "Data columns (total 14 columns):\n",
-      " #   Column          Non-Null Count   Dtype  \n",
-      "---  ------          --------------   -----  \n",
-      " 0   PatientId       110527 non-null  float64\n",
-      " 1   AppointmentID   110527 non-null  int64  \n",
-      " 2   Gender          110527 non-null  object \n",
-      " 3   ScheduledDay    110527 non-null  object \n",
-      " 4   AppointmentDay  110527 non-null  object \n",
-      " 5   Age             110527 non-null  int64  \n",
-      " 6   Neighbourhood   110527 non-null  object \n",
-      " 7   Scholarship     110527 non-null  int64  \n",
-      " 8   Hypertension    110527 non-null  int64  \n",
-      " 9   Diabetes        110527 non-null  int64  \n",
-      " 10  Alcoholism      110527 non-null  int64  \n",
-      " 11  Handicap        110527 non-null  int64  \n",
-      " 12  SMS_received    110527 non-null  int64  \n",
-      " 13  No-show         110527 non-null  object \n",
-      "dtypes: float64(1), int64(8), object(5)\n",
-      "memory usage: 11.8+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "base_data.info() # Everything looks fine now"
    ]
   },
   {
@@ -599,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +715,7 @@
        "4         0             0      No  "
       ]
      },
-     "execution_count": 204,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +833,7 @@
        "1             0      No  "
       ]
      },
-     "execution_count": 206,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,10 +847,88 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 110527 entries, 0 to 110526\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column          Non-Null Count   Dtype         \n",
+      "---  ------          --------------   -----         \n",
+      " 0   PatientId       110527 non-null  float64       \n",
+      " 1   AppointmentID   110527 non-null  int64         \n",
+      " 2   Gender          110527 non-null  object        \n",
+      " 3   ScheduledDay    110527 non-null  datetime64[ns]\n",
+      " 4   AppointmentDay  110527 non-null  datetime64[ns]\n",
+      " 5   Age             110527 non-null  int64         \n",
+      " 6   Neighbourhood   110527 non-null  object        \n",
+      " 7   Scholarship     110527 non-null  bool          \n",
+      " 8   Hypertension    110527 non-null  bool          \n",
+      " 9   Diabetes        110527 non-null  bool          \n",
+      " 10  Alcoholism      110527 non-null  bool          \n",
+      " 11  Handicap        110527 non-null  bool          \n",
+      " 12  SMS_received    110527 non-null  int64         \n",
+      " 13  No-show         110527 non-null  object        \n",
+      "dtypes: bool(5), datetime64[ns](2), float64(1), int64(3), object(3)\n",
+      "memory usage: 8.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_data.info() # Everything looks fine now"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Checking for null values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PatientId         0\n",
+       "AppointmentID     0\n",
+       "Gender            0\n",
+       "ScheduledDay      0\n",
+       "AppointmentDay    0\n",
+       "Age               0\n",
+       "Neighbourhood     0\n",
+       "Scholarship       0\n",
+       "Hypertension      0\n",
+       "Diabetes          0\n",
+       "Alcoholism        0\n",
+       "Handicap          0\n",
+       "SMS_received      0\n",
+       "No-show           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hence there are no null values in our data set"
    ]
   },
   {
