--- a/healthcare.ipynb
+++ b/healthcare.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "4         1           0        0             0      No  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "110526         0           0        0             1      No  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "(110527, 14)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
        "4         0             0      No  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
        "1             0      No  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
        "(3539, 14)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1205,13 +1205,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "53% of the patients in the data are Adults, 21% of children,13% of Seniors and 12% of Youth.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Unique PatientIds and AppointmentIds\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
