--- a/healthcare.ipynb
+++ b/healthcare.ipynb
@@ -1720,11 +1720,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now we can see the factors that affect the absence of the patients more clearly. The gender and age are the most important factor as we saw earlier that female and youth show up for their appointment more than male and old people. Neighbohood and hypertension come after gender and age as there are some neighborhoods that the diseases are spread and patients with hypertension tend to show up if they have it or not. So we need to search for more factors to help patient remmenber their appointments and show up."
+   ]
   }
  ],
  "metadata": {
