removed scalling from data

--- a/model_logistic.ipynb
+++ b/model_logistic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,16 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "import datetime as dt\n",
+    "import statsmodels.api as sm\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "import sklearn\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import silhouette_score\n"
+    "from sklearn.feature_selection import RFE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +44,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>showUp_diff</th>\n",
+       "      <th>Missed_App</th>\n",
+       "      <th>GapDays</th>\n",
        "      <th>Age</th>\n",
        "      <th>Scholarship</th>\n",
        "      <th>Hypertension</th>\n",
@@ -60,6 +60,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>-1.720536</td>\n",
        "      <td>-0.666084</td>\n",
        "      <td>1.054751</td>\n",
        "      <td>0</td>\n",
@@ -73,6 +74,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>-1.720497</td>\n",
        "      <td>-0.666084</td>\n",
        "      <td>0.787598</td>\n",
        "      <td>0</td>\n",
@@ -86,6 +88,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>-1.720458</td>\n",
        "      <td>-0.666084</td>\n",
        "      <td>1.054751</td>\n",
        "      <td>0</td>\n",
@@ -99,6 +102,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>-1.720418</td>\n",
        "      <td>-0.666084</td>\n",
        "      <td>-1.349626</td>\n",
        "      <td>0</td>\n",
@@ -112,6 +116,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>-1.720379</td>\n",
        "      <td>-0.666084</td>\n",
        "      <td>0.787598</td>\n",
        "      <td>0</td>\n",
@@ -128,22 +133,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   showUp_diff       Age  Scholarship  Hypertension  Diabetes  Alcoholism  \\\n",
-       "0    -0.666084  1.054751            0             1         0           0   \n",
-       "1    -0.666084  0.787598            0             0         0           0   \n",
-       "2    -0.666084  1.054751            0             0         0           0   \n",
-       "3    -0.666084 -1.349626            0             0         0           0   \n",
-       "4    -0.666084  0.787598            0             1         1           0   \n",
+       "   Missed_App   GapDays       Age  ...  SMS_received  Gender_Female  show\n",
+       "0   -1.720536 -0.666084  1.054751  ...             0              1     1\n",
+       "1   -1.720497 -0.666084  0.787598  ...             0              0     1\n",
+       "2   -1.720458 -0.666084  1.054751  ...             0              1     1\n",
+       "3   -1.720418 -0.666084 -1.349626  ...             0              1     1\n",
+       "4   -1.720379 -0.666084  0.787598  ...             0              1     1\n",
        "\n",
-       "   Handicap  SMS_received  Gender_Female  show  \n",
-       "0         0             0              1     1  \n",
-       "1         0             0              0     1  \n",
-       "2         0             0              1     1  \n",
-       "3         0             0              1     1  \n",
-       "4         0             0              1     1  "
+       "[5 rows x 11 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,294 +156,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# hopkins(df) = 0.7857171633346578"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### we can cluster the data since hopkins stats is good"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KMeans(max_iter=50, n_clusters=4)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">KMeans</label><div class=\"sk-toggleable__content\"><pre>KMeans(max_iter=50, n_clusters=4)</pre></div></div></div></div></div>"
-      ],
-      "text/plain": [
-       "KMeans(max_iter=50, n_clusters=4)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kmeans = KMeans(n_clusters=4, max_iter=50)\n",
-    "kmeans.fit(df.drop('show', axis=1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    42836\n",
-       "2    41072\n",
-       "3    19119\n",
-       "1     3953\n",
-       "dtype: int64"
+       "(106980, 11)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lbl = pd.DataFrame(kmeans.labels_)\n",
-    "lbl.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>showUp_diff</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Scholarship</th>\n",
-       "      <th>Hypertension</th>\n",
-       "      <th>Diabetes</th>\n",
-       "      <th>Alcoholism</th>\n",
-       "      <th>Handicap</th>\n",
-       "      <th>SMS_received</th>\n",
-       "      <th>Gender_Female</th>\n",
-       "      <th>show</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-0.666084</td>\n",
-       "      <td>1.054751</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.666084</td>\n",
-       "      <td>0.787598</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.666084</td>\n",
-       "      <td>1.054751</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-0.666084</td>\n",
-       "      <td>-1.349626</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.666084</td>\n",
-       "      <td>0.787598</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106975</th>\n",
-       "      <td>1.626957</td>\n",
-       "      <td>0.787598</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106976</th>\n",
-       "      <td>1.626957</td>\n",
-       "      <td>0.564970</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106977</th>\n",
-       "      <td>2.020050</td>\n",
-       "      <td>-0.770795</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106978</th>\n",
-       "      <td>2.020050</td>\n",
-       "      <td>-0.013861</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106979</th>\n",
-       "      <td>2.020050</td>\n",
-       "      <td>0.698547</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>106980 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        showUp_diff       Age  Scholarship  Hypertension  Diabetes  \\\n",
-       "0         -0.666084  1.054751            0             1         0   \n",
-       "1         -0.666084  0.787598            0             0         0   \n",
-       "2         -0.666084  1.054751            0             0         0   \n",
-       "3         -0.666084 -1.349626            0             0         0   \n",
-       "4         -0.666084  0.787598            0             1         1   \n",
-       "...             ...       ...          ...           ...       ...   \n",
-       "106975     1.626957  0.787598            0             0         0   \n",
-       "106976     1.626957  0.564970            0             0         0   \n",
-       "106977     2.020050 -0.770795            0             0         0   \n",
-       "106978     2.020050 -0.013861            0             0         0   \n",
-       "106979     2.020050  0.698547            0             0         0   \n",
-       "\n",
-       "        Alcoholism  Handicap  SMS_received  Gender_Female  show  \n",
-       "0                0         0             0              1     1  \n",
-       "1                0         0             0              0     1  \n",
-       "2                0         0             0              1     1  \n",
-       "3                0         0             0              1     1  \n",
-       "4                0         0             0              1     1  \n",
-       "...            ...       ...           ...            ...   ...  \n",
-       "106975           0         0             1              1     1  \n",
-       "106976           0         0             1              1     1  \n",
-       "106977           0         0             1              1     1  \n",
-       "106978           0         0             1              1     1  \n",
-       "106979           0         0             1              1     1  \n",
-       "\n",
-       "[106980 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
+    "df.shape"
    ]
   },
   {
@@ -451,10 +179,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import plotly.express as px\n",
-    "px.scatter_3d(rfm_df_scaled, x='amount',y='frequency',z='recency', color=Kmeans.labels_)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
