--- a/model_logistic.ipynb
+++ b/model_logistic.ipynb
@@ -15,7 +15,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "from sklearn.feature_selection import RFE"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "from sklearn.feature_selection import RFE\n"
    ]
   },
   {
